# data-structure

./: CMakeLists.txt
include/: ChainList.h  SeqList.h
src/: ChainList.c  SeqList.c
test/: 01_SeqListTest.c  02_ChainListTest.c
